--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
 
-    lient_max_body_size 10m;
+    client_max_body_size 10m;
     client_body_buffer_size 128k;
 
     # Timeout if the real server is dead
